argocd/argocd-ingress.yml
# aws nlb -> ingress controller(pod) -> ingress -> service -> pod
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # kubernetes.io/ingress.class: nginx 
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx 

  # certificate 이용한 https:// 통신하고 싶다면?
  # secretName은 인증서 발급시 사용하는 이름
  # tls:
  # - hosts:
  #     - argo.inspireseop2283.shop
  #   secretName: argo-inspireseop2283-com-tls


  rules:
    # 레코드로 등록한 도메인 이름 
  - host: argo.inspireseop2283.shop
    http:
      paths:
        # http://server.inspireseop2283.shop/
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
